<resources>
    <string name="app_name">Vipul Goyal Task</string>
    <string name="portfolio">Portfolio</string>
    <string name="no_record_found">No Record Found</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="ltp_text">LTP:</string>
    <string name="net_qty">NET QTY:</string>
    <string name="pl_text">P&amp;L:</string>
    <string name="rupee_sign">₹</string>
    <string name="current_value">Current value*</string>
    <string name="total_investment">Total investment*</string>
    <string name="today_profit_loss">Today\'s Profit &amp; Loss*</string>
    <string name="profit_loss">Profit &amp; Loss*</string>
</resources>