<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.ui.view.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:title="@string/portfolio"
        android:titleTextColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPortfolioList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar" />


    <TextView
        android:id="@+id/tvNoRecordFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_record_found"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/portfolioSummaryBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:visibility="gone"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrey"
            android:padding="13dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clShowHideView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvCurrentLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/current_value"
                    android:textColor="@color/darkGrey"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/tvCurrentValue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvCurrentValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:includeFontPadding="false"
                    android:textColor="@color/darkGrey"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvCurrentLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvCurrentLabel" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvInvestmentLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/total_investment"
                    android:textColor="@color/darkGrey"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/tvInvestmentValue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvCurrentLabel" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvInvestmentValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:includeFontPadding="false"
                    android:textColor="@color/darkGrey"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvInvestmentLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvInvestmentLabel" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTodayPLLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/today_profit_loss"
                    android:textColor="@color/darkGrey"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/tvTodayPLValue"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvInvestmentLabel" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTodayPLValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:includeFontPadding="false"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tvTodayPLLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvTodayPLLabel" />

                <View
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/darkGrey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTodayPLLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clBottomView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clShowHideView">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTotalPLLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:includeFontPadding="false"
                    android:text="@string/profit_loss"
                    android:textColor="@color/darkGrey"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/ivArrow"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginHorizontal="10dp"
                    android:rotation="-180"
                    android:src="@drawable/down_arrow"
                    app:layout_constraintStart_toEndOf="@+id/tvTotalPLLabel"
                    app:layout_constraintTop_toTopOf="@+id/tvTotalPLLabel" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvTotalPLValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:includeFontPadding="false"
                    android:textColor="@color/red"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivArrow"
                    app:layout_constraintTop_toTopOf="@+id/tvTotalPLLabel" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>